# neonode

./: .gitignore  Cargo.toml  build.rs  history.txt  play.srqlnb
data/: IDENTITY  LOG  OPTIONS-000007
inserter/: Cargo.toml
inserter/src/: ledger.rs  main.rs  order.rs  schema.surql  trade.rs
protos/: Cargo.toml  build.rs
protos/src/: lib.rs
scripts/: db.sh
src/: main.rs  schema.surrealql
testdata/: eventlog.evt
testdata.db/: 000013.sst  000016.sst  IDENTITY  LOG  LOG.old.1695199460576083  LOG.old.1695199620790585  LOG.old.1695201135752816  MANIFEST-000018
