[package]
name = "surrealnode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.4.3"
bytes = "1.5.0"
prost = "0.12.1"
prost-types = "0.12.1"
surrealdb = { version = "1.0.0", features = ["kv-speedb"] }
tokio = "1.32.0"

[build-dependencies]
cmd_lib = "1.3.0"
prost-build = "0.12.1"
