[package]
name = "surrealnode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.4.3"
bytes = "1.5.0"
num = { version = "0.4.1", features = ["num-bigint"] }
num-bigint = { version = "0.4.4", features = ["serde"] }
prost = "0.12.1"
prost-types = "0.12.1"
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32.0"
serde = { version = "1.0.188", features = ["derive"] }
surrealdb = { version = "1.0.0", features = ["kv-speedb"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
cmd_lib = "1.3.0"
prost-build = "0.12.1"
