[package]
name = "surrealnode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
byteorder = "1.4.3"
bytes = "1.5.0"
prost = "0.12.1"
prost-types = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
surrealdb = { version = "1.0.0" }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
protos = {path = "../protos"}
