[package]
name = "protos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbjson = "0.6.0"
pbjson-types = "0.6.0"
prost = "0.12.1"
prost-types = "0.12.1"

[build-dependencies]
cmd_lib = "1.3.0"
prost-build = "0.12.1"
pbjson-build = "0.6.2"
